# ft_p_clion

./: CMakeLists.txt
includes/: main.h
src_client/: catch_client_sig.c  cmd_cd.c  cmd_get.c  cmd_ls.c  cmd_put.c  cmd_pwd.c  cmd_quit.c  connect_to_server.c  get_data_from_socket.c  get_param.c  loop_cmd.c  main_client.c
src_client/includes/: catch_client_sig.h  client_struct.h  cmd_cd.h  cmd_get.h  cmd_ls.h  cmd_put.h  cmd_pwd.h  cmd_quit.h  connect_to_server.h  get_data_from_socket.h  get_param.h  loop_cmd.h  main_client.h
src_common/: get_args.c  recv_data.c  send_data.c  str_utils.c
src_common/includes/: get_args.h  recv_data.h  send_data.h  shared_struct.h  str_utils.h
src_server/: auth_client.c  catch_signal.c  cmd_cd_serv.c  cmd_get_serv.c  cmd_ls.c  cmd_put_serv.c  cmd_pwd_serv.c  cmd_quit_serv.c  launch_server.c  main_server.c  read_loop.c  test_path.c
src_server/includes/: auth_client.h  catch_signal.h  cmd_cd_serv.h  cmd_get_serv.h  cmd_ls_serv.h  cmd_put_serv.h  cmd_pwd_serv.h  cmd_quit_serv.h  launch_server.h  main_server.h  read_loop.h  server_struct.h  test_path.h
